fix spacing

--- a/src/components/Header/MainNavigation.module.css
+++ b/src/components/Header/MainNavigation.module.css
@@ -28,6 +28,10 @@ header {
   display: flex;
 }
 
+.header .user-icons .user-icon:first-child {
+  margin-right: 0.5rem;
+}
+
 .header .user-icons .user-icon a {
   color: black;
   transition: all 0.2s ease-in-out;
