--- a/src/components/Index/Bestsellers.module.css
+++ b/src/components/Index/Bestsellers.module.css
@@ -19,3 +19,8 @@
   grid-template-columns: repeat(4, 1fr);
   grid-gap: 3rem;
 }
+
+.section .items ul {
+  display: flex;
+  justify-content: space-evenly;
+}
